created tables in mysql db

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 spring.application.name=Restaurant Review API
+spring.datasource.url=jdbc:mysql://localhost:3306/reviewplatform
+spring.datasource.username=root
+spring.datasource.password=root123
+spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
